src/renderer/views/Trending/Trending.css
.card {
  inline-size: 85%;
  margin-block: 0 60px;
  margin-inline: auto;
}

.trendingInfoTabs {
  inline-size: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  margin-block: -3px 10px;
  color: var(--tertiary-text-color);
}

.selectedTab {
  border-block-end: 3px solid var(--primary-color);
  color: var(--primary-text-color);
  font-weight: bold;
  box-sizing: border-box;
  margin-block-end: -3px;
}

.tab {
  text-align: center;
  padding: 15px;
  font-size: 1.1em;
  cursor: pointer;
  align-self: flex-end;
}

.tab:hover {
  font-weight: bold;
}

.trendingIcon {
  color: var(--primary-color);
}

@media only screen and (width <= 680px) {
  .card {
    inline-size: 90%;
  }
}

